# strange-sandwich

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs  openai.rs
ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.css
ui/core/: Cargo.toml
ui/core/src/: lib.rs
ui/src/: app.rs  main.rs
ui/src-tauri/: Cargo.toml  recipe_schema.json  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
