[package]
name = "strange-sandwich-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
sycamore = { version = "0.9", features = ["suspense", "serde", "web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
strange-sandwich-core = { version = "0.1.0", path = "core" }
